added readme and tmp dir config

--- a/home/.tmux-powerlinerc
+++ b/home/.tmux-powerlinerc
@@ -124,4 +124,6 @@
 	# 2. Find the weather for you location
 	# 3. Copy the last numbers in that URL. e.g. "http://weather.yahoo.com/united-states/california/newport-beach-12796587/" has the numbers "12796587"
 	export TMUX_POWERLINE_SEG_WEATHER_LOCATION="676757"
+
+    export TMUX_POWERLINE_DIR_TEMPORARY="/tmp/tmux-powerline/"
 # }
